<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:id="@+id/content_linearLayout_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/content_textView_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_form_activity_phrase" />

            <EditText
                android:id="@+id/content_editText_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />

            <TextView
                android:id="@+id/content_textView_errorMessage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#ff0000"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/content_textView_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_form_activity_info" />

            <RadioGroup
                android:id="@+id/content_radioGroup_position"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/content_radioButton_position1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:checked="true"
                    android:text="@string/content_form_activity_radioButtonPosition1" />

                <RadioButton
                    android:id="@+id/content_radioButton_position2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/content_form_activity_radioButtonPosition2" />

                <RadioButton
                    android:id="@+id/content_radioButton_position3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_form_activity_radioButtonPosition3" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/content_button_save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/orangeButton"
            android:padding="10dp"
            android:text="@string/content_form_activity_buttonSave"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>