<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_logo_text"
            android:textStyle="bold"
            android:textColor="@color/orangeButton"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_logo_slogan"
            android:textStyle="bold"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_version"
            android:textStyle="bold"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</LinearLayout>