<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="10dp">

	<LinearLayout
		android:id="@+id/sender_linearLayout_container"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="vertical" >

		<TextView
			android:id="@+id/sender_textView_number"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/sender_form_activity_numberOrName"/>

		<EditText
			android:id="@+id/sender_editText_number"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:singleLine="true" />

		<TextView
			android:id="@+id/sender_textView_errorMessage"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textColor="#ff0000"
			android:textStyle="bold"
			android:visibility="gone"/>
		
		<TextView
			android:id="@+id/sender_textView_info"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/sender_form_activity_info"/>

	</LinearLayout>

	<Button
		android:id="@+id/sender_button_save"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@color/orangeButton"
		android:layout_marginTop="40dp"
		android:padding="10dp"
		android:text="@string/sender_form_activity_buttonSave"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:textColor="#ffffff"
		android:textStyle="bold" />

</LinearLayout>